--- a/DR300B/问题总汇.md
+++ b/DR300B/问题总汇.md
@@ -3,3 +3,9 @@
 **照射野偏离bucky解决办法**：
 
 先把线束器和球管对其然后再转动牛头，看偏离程度转动 看看是否达到小于或等于5mm的要求。在看1米和1米8的位置看看是否都符合，如都符合则调试成功。
+
+#### 高压发生器
+
+**新版高压发生器**
+
+高压发生器于同步盒连线改版，改成DB15插针
