--- a/DR300B/问题总汇.md
+++ b/DR300B/问题总汇.md
@@ -1,34 +1,8 @@
-#### 照射野
-
-**照射野偏离bucky解决办法**：
-
-先把线束器和球管对其然后再转动牛头，看偏离程度转动 看看是否达到小于或等于5mm的要求。在看1米和1米8的位置看看是否都符合，如都符合则调试成功。
-
-#### 高压发生器
-
-**新版高压发生器**
-
-高压发生器于同步盒连线改版，改成DB15插针
-
-#### 球管
-
-球馆打火
-
-#### **平板**
+#### ip设置
 
 康众平板IP地址192.168.68.1
 
 电脑设置IP地址192.168.68.100
-
-#### 切换time和mas模式
-
-如time模式里面的ma是100切换到mas里面mas是100所以报错
-
-#### 串口版
-
-串口板错误一般会报错与发生器断开联络，然后通讯中断
-
-
 
 #### **shift com min**
 
