--- a/DR300B/发生器增加电离室.md
+++ b/DR300B/发生器增加电离室.md
@@ -1,8 +1,14 @@
-电离室接线图如下
+**电离室原理图**
+
+![](D:\cheng\SHINVA\DR300B\img\原理图.jpg)
+
+
+
+**电离室接线图如下**
 
 ![](D:\cheng\SHINVA\DR300B\img\武警电离室.jpg)
 
-以下是电离室板
+**以下是电离室板**
 
 ![增加电离室](D:\cheng\SHINVA\DR300B\img\电离室版.jpg)
 
